# RoboticsStudio

./: .gitignore  CMakeLists.txt  README.md  demo.rsproj  run.sh
.github/workflows/: build-appimage.yml
demo/: demo copy.rsproj  demo.rsproj  demo1.js  demo1.rsproj  demo2.js  demo2.rsproj  demoScript.js
models/: Catalog.json  servo.xml  servo2.xml
models/dummy/base_rect/: base_rect.rsdef
models/imu/imu_mpu6050/: imu_mpu6050.rsdef
models/imu/imu_mpu6050/meshes/: mpu6050.mtl
models/joints/long_u_bracket/: long_u_bracket.rsdef
models/joints/long_u_bracket/meshes/: body.mtl
models/joints/multipurpose_bracket/: multipurpose_bracket.rsdef
models/motor/dc_gear_60rpm/: dc_gear_60rpm.rsdef
models/motor/dc_gear_60rpm/meshes/: shaft.mtl  tt_motor.mtl
models/sensor/sensor_mpu6050/: sensor_mpu6050.rsdef
models/servo/servo_mg996r/: servo_mg996r.rsdef
models/servo/servo_mg996r/meshes/: servo_mg996r.mtl
models/servo/servo_sg90/: body.xml  servo_sg90.rsdef
models/servo/servo_sg90/meshes/: servo_body.mtl
models/stepper/nema17/: stepper_nema17.rsdef
models/stepper/nema17/meshes/: stepper_nema17.mtl
models/wheel/wheel_D_65_25/: wheel_D_65_25.rsdef
models/wheel/wheel_D_65_25/meshes/: main_body.mtl
schema/: rsproj.schema.json
src/: main.cpp
src/Core/: Application.cpp  Application.h  InputManager.h  Log.cpp  Log.h  Project.cpp  Project.h  Utils.h  Version.h.in  inputManager.cpp
src/Rendering/: Camera.h  CameraController.h  MViewport.cpp  MViewport.h  OffscreenSim.cpp  OffscreenSim.h
src/Simulation/: MujocoContext.cpp  MujocoContext.h  SimulationManager.cpp  SimulationManager.h
src/Simulation/Components/: Component.h  ComponentBlueprint.cpp  ComponentBlueprint.h  ComponentInstance.cpp  ComponentInstance.h  LibraryManager.cpp  LibraryManager.h
src/Simulation/Controllers/: SimController.h
src/Simulation/ErrorSystem/: BaseEmulator.h  DcGearEmulatorCpp.h  DefaultEmulatorCpp.h  EmulationInjector.h  Emulator.h  EmulatorFactory.cpp  EmulatorFactory.h  IMUEmulatorCpp.h  ServoEmulatorCpp.h  StepperEmulatorCpp.h
src/Simulation/MicroController/: MicroController.cpp  MicroController.h
src/UI/: EditorWindow.cpp  EditorWindow.h  LauncherWindow.cpp  LauncherWindow.h  MainWindow.cpp  MainWindow.h
src/UI/BottomBar/: ComponentsPanel.cpp  ComponentsPanel.h  OutputPanel.cpp  OutputPanel.h  ScriptPanel.cpp  ScriptPanel.h
src/UI/Dialogs/: ModelDownloaderDialog.cpp  ModelDownloaderDialog.h  NewProjectDialog.cpp  NewProjectDialog.h
src/UI/Docking/: InspectorPanel.cpp  InspectorPanel.h  PlotPanel.cpp  PlotPanel.h  SceneTreePanel.cpp  SceneTreePanel.h
src/UI/Resources/: RoboticsStudio.desktop
src/UI/Resources/styles/: dark.qss
src/UI/Toast/: Toast.cpp  Toast.h
src/Utils/: Buffer.h  CodeEditor.cpp  CodeEditor.h  Graph.cpp  Graph.h  Spatial.cpp  Spatial.h
